[package]
name = "reqwest-file"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander van Ratingen"]
homepage = "https://github.com/alvra/reqwest-file"
repository = "https://github.com/alvra/reqwest-file"
documentation = "https://docs.rs/reqwest-file"
description = "Use web resources like regular async files"
readme = "README.md"
keywords = ["http", "request", "async"]

[dependencies]
bytes = "1.1.0"
pin-project = "1.0.10"
futures-util = "0.3.21"
tokio = { version = "1.16.1", default-features = false }
tokio-util = { version = "0.7.0", default-features = false, features = ["io"] }
reqwest = { version = "0.11.9", default-features = false, features = ["stream"] }

[dev-dependencies]
paste = "1.0.6"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
tokio = { version = "1.16.1", features = ["rt", "macros"] }
tokio-test = "0.4.2"
axum = { version = "0.4.5", default-features = false, features = ["headers"] }
